Fixed spacing issue.

--- a/templates/css/style.css
+++ b/templates/css/style.css
@@ -12,6 +12,7 @@
 
 .top-menu {
     margin-bottom: 5px;
+    margin-right: 5px;
 }
 
 li {
